# Yolov5_Deepsort_pytorch_ROS

./: CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: detector.launch  tracker.launch
msg/: BoundingBox.msg
scripts/: detector.py  tracker.py
scripts/configs/: deep_sort.yaml
scripts/deep_sort/: __init__.py  deep_sort.py
scripts/deep_sort/sort/: detection.py  track.py
scripts/deep_sort/utils_ds/: parser.py
scripts/yolov5/utils/: general.py
